tutorials/Script_Image/: removed tutorials/Drawables/index.html: added and edited down to drawables only. tutorials/index.html: reflected the change

--- a/tutorials/index.html
+++ b/tutorials/index.html
@@ -146,7 +146,7 @@
 
 <div class="subtitle">Script Authoring (Presented Alphabetically)</div>
 <p>
-  <a href="Script_Image/">Working With The Image</a> Before you script, know what an
+  <a href="Drawables/">Working With The Image</a> Before you script, know what an
   image is and isn't and what a drawable is. Or at least be able to take a good guess
   about it ...
 </p>
