docs/plug-ins/: added style/default.css: added div.book-of-wilber :) images/wilberbook.jpg: added

--- a/tutorials/Drawables/index.html
+++ b/tutorials/Drawables/index.html
@@ -8,14 +8,16 @@
 <p>
   A plug-in is of limited use if it has nothing to do with the image. In this section, we explore the exciting world of the GIMP image hierarchy, and learn how to manipulate it.
 </p>
+<div class="book-of-wilber">
 <p>
-  <i>In the beginning, there was Wilber, Wilber the gimp. The graphic was without form and void, and darkness was upon the face of the desktop, 
-  and the Spirit of Wilber was moving over the face of the bitstream.</i>
+  In the beginning, there was Wilber, Wilber the gimp. The graphic was without form and void, and darkness was upon the face of the desktop, 
+  and the Spirit of Wilber was moving over the face of the bitstream.
   <br /><br />
-  <i>And Wilber said, "&lt;Toolbox&gt;File-&gt;New," and there was an image. And Wilber saw that the image was good, and Wilber separated the image into drawables. 
+  And Wilber said, "&lt;Toolbox&gt;File-&gt;New," and there was an image. And Wilber saw that the image was good, and Wilber separated the image into drawables. 
   And Wilber looked down at what he had wrought, and Wilber said, "Oh golly."  For Wilber had made the drawables of the layer according to their kinds, 
-  and the drawables of the channel according to their kinds, and the drawables of the mask according to their kinds ...</i>
+  and the drawables of the channel according to their kinds, and the drawables of the mask according to their kinds ...
 </p>
+</div>
 <p>
   ... or you could look at it the other way around. We have all sorts of silly things like masks, channels, and layers, but they're all just a bunch of pixels 
   that can be drawn on, so we treat them much the same and lump them all in to the category of "drawables". And an image, then, is just what you get when you 
@@ -26,7 +28,7 @@
   In any case, the most complex data structure a plug-in uses for an image is an integer (gint32), a simple ID by which the GIMP knows that image.
 </p>
 <p>
-  Drawables make life much more exciting. &gt;snip&lt;
+  Drawables make life much more exciting. &lt;snip&gt;
 </p>
 <p>
   The original document can be found <a href="http://gimp-plug-ins.sourceforge.net/doc/Writing/html/sect-image.html#sect-image-intro">here</a>.
