team.html: put jtl's real name there for google to find!! docs/index.html: reflected the new addition (doh)

--- a/team.html
+++ b/team.html
@@ -34,7 +34,7 @@
   <li>Gautam N. Lad</li>
   <li>Jakub Steiner</li>
   <li>James Henstridge</li>
-  <li>Jens T L</li>
+  <li>Jens T. Lautenbach</li>
   <li>John Beppu</li>
   <li>Kevin Turner</li>
   <li>Marco (LM) Lamberto</li>
