team.html: added a thank you to the previous web masters

--- a/team.html
+++ b/team.html
@@ -46,6 +46,9 @@
   <li>Ville Pätsi</li>
   <li>Zach Beane</li>
 </ul>
-
+<p>
+  Many, many thanks to the webmasters who came before, Jens T. Lautenbach (jtl),
+  and Adrian Likins (Adrian).  
+</p>
 <!--#include virtual="/includes/linkbar.inc" -->
 <!--#include virtual="/includes/footer.inc" -->
