ls/Drawables/index.html: fixed author email addy.

--- a/tutorials/Drawables/index.html
+++ b/tutorials/Drawables/index.html
@@ -38,7 +38,7 @@
 <!--#include virtual="/includes/tutnavbar.inc" -->
     <div>
       <span id="footerleft">
-        Tutorial &copy; 2002 <a href="mailto:acapnotic@users.sourceforge.net">Kevin Turner</a>
+        Tutorial &copy; 2002 <a href="http://sourceforge.net/sendmessage.php?touser=9300">Kevin Turner</a>
       </span>
       <span id="footerright">
         <a href="mailto:webmaster@gimp.org">webmaster@gimp.org</a>
