Modified ChangeLog. Trying kbd out.
Modified ChangeLog.
Trying kbd out.

--- a/tutorials/Creating_Icons/index.html
+++ b/tutorials/Creating_Icons/index.html
@@ -55,7 +55,7 @@
   For icon work, you may find it most convenient to use the main window, plus the palette and layers dialogs, and of course the actual image you're working on.
 </p>
 <p>
-  To create a new image file, press <b>Ctrl+N</b>. Select a 48x48 pixel image, the standard Gnome icon size. 
+  To create a new image file, press <kbd>Ctrl+N</kbd>. Select a 48x48 pixel image, the standard Gnome icon size. 
   Because working on such a tiny pixmap requires a lot of detail, zoom in to work on a pixel-by-pixel level. 
   Try <i>8:1</i> magnification (<span class="filter">&lt;Image&gt;View-&gt;Zoom-&gt;8:1</span>).
 </p>
