Modified ChangeLog. Add the <kbd> tags for keystrokes in the tutorials.
Modified ChangeLog.
Add the <kbd> tags for keystrokes in the tutorials.

--- a/tutorials/3d_Logo/index.html
+++ b/tutorials/3d_Logo/index.html
@@ -104,10 +104,11 @@
   <img src="logo-09.png" alt=""/>
 </p>
 <p>
-  Cut (edit/cut or CTRL+X on PC or Command+X on Mac). This will remove the blurred layers selection from the highlight layer. You could do this with
-  channel masks, but I'm a man of simple needs and wants. There's another step after this that I haven't documented, but that's because it's the same
-  thing again (steps 6-10) but with the other layer (tmp2: see steps 5 and 6). Move (nudge) that layer in the opposite direction (up and to the left
-  about 5 pixels), then make the cut from the lowlight layer. Once you're done, delete the two blurred layers (tmp1 and tmp2). 
+  Cut (edit/cut or <kbd>CTRL+X</kbd> on PC or <kbd>Command+X</kbd> on Mac). This will remove the blurred layers selection from the highlight layer. 
+  You could do this with channel masks, but I'm a man of simple needs and wants. There's another step after this that I haven't 
+  documented, but that's because it's the same  thing again (steps 6-10) but with the other layer 
+  (tmp2: see steps 5 and 6). Move (nudge) that layer in the opposite direction (up and to the left about 5 pixels), 
+  then make the cut from the lowlight layer. Once you're done, delete the two blurred layers (tmp1 and tmp2). 
 </p>
 
 <div class="subtitle">Step 11</div>
@@ -170,7 +171,7 @@
   <img src="logo-16.png" alt=""/>
 </p>
 <p>
-  Fill the layer with black and deselect (CTRL+SHIFT+A on PC or Command+SHIFT+A on Mac). 
+  Fill the layer with black and deselect (<kbd>CTRL+SHIFT+A</kbd> on PC or <kbd>Command+SHIFT+A</kbd> on Mac). 
   As you can see, the image now has more background contrast. 
   Now, duplicate that layer and lower the copy below the original outline layer. Make sure that Keep Trans. is not checked, and blur it. 
   I like soft shadows, so I used a Gaussian Blur (RLE) of about 30 pixels. Drop the Opacity of the layer down to about 50 and nudge it 
@@ -230,8 +231,8 @@
 <p>
   Pick a nice bright orange or brown color for the rust. My site logo used a reddy-borwn color, but here I've chosen a bright orange. 
   Fill the selection with it. Using the famed Alpha to Selection move, get the selection for the original text layer. Once you have that selection area,
-  click the rust layer to make it active. Invert the selection (CTRL+I or Command+I) and Cut. This will leave only the part of the rust layer that actually
-  covers the letters and not the extra. 
+  click the rust layer to make it active. Invert the selection (<kbd>CTRL+I</kbd> or <kbd>Command+I</kbd>) and Cut. 
+  This will leave only the part of the rust layer that actually covers the letters and not the extra. 
 </p>
 
 <div class="subtitle">Step 24</div>
