--- a/tutorials/Blending_Exposures/index.html
+++ b/tutorials/Blending_Exposures/index.html
@@ -56,7 +56,7 @@
   The reason is because I hand-held the shots, and they are far from aligned. I'm going to have to move the bottom image until the arch is 
   aligned as best I can get it. Also, the top image is the composition I want anyway, and I'll have less painting to do that way.
   <br /><br />
-  Go the image that is going to be on the bottom. Open the Layers dialog (Ctrl+L) and click on the new layer button (<img src="newlayer.jpg" alt=""/>) to create a new layer.
+  Go the image that is going to be on the bottom. Open the Layers dialog (<kbd>Ctrl+L</kbd>) and click on the new layer button (<img src="newlayer.jpg" alt=""/>) to create a new layer.
 </p>
 
 <div class="subtitle">Step 3</div>
@@ -65,8 +65,8 @@
   <img src="layers4.jpg" alt=""/>
 </p>
 <p>
-  Go to the image that is going to be on top. Select all and copy (Ctrl+A then Ctrl+C). In the Layers dialog, make sure the new layer is selected, 
-  then go to the bottom image window and paste (Ctrl+V). In the Layers dialog, click on the anchor button (<img src="anchor.jpg" alt=""/>) to anchor the floating image.
+  Go to the image that is going to be on top. Select all and copy (<kbd>Ctrl+A</kbd> then <kbd>Ctrl+C</kbd>). In the Layers dialog, make sure the new layer is selected, 
+  then go to the bottom image window and paste (<kbd>Ctrl+V</kbd>). In the Layers dialog, click on the anchor button (<img src="anchor.jpg" alt=""/>) to anchor the floating image.
 </p>
 
 <div class="subtitle">Step 4</div>
@@ -157,7 +157,7 @@
   and Blur (<img src="convolve.jpg" alt=""/>) are my tools of choice.
 </p>
 <p>
-  Since I'm not sure if these tools have the ability to work across layers (as they do in Photoshop), I duplicate the image (Ctrl+D) and flatten the duplicate 
+  Since I'm not sure if these tools have the ability to work across layers (as they do in Photoshop), I duplicate the image (<kbd>Ctrl+D</kbd>) and flatten the duplicate 
   (<span class="filter">&lt;Image&gt;Layers-&gt;Flatten Image</span>) and work on it. This has the additional benefit that if I ever mess up the blending job too badly I can 
   always easily start over at this step.
 </p>
