--- a/tutorials/Blown_Out_Highlights/index.html
+++ b/tutorials/Blown_Out_Highlights/index.html
@@ -61,7 +61,7 @@
 <p>
   The first step is to create a channel mask to be able to mask out parts of the image we don't want to affect. I'll use this for the main "pixel graft".
   <br />
-  Duplicate the original image (<span class="filter">&lt;Image&gt;Image-&gt;Duplicate</span> or Ctrl+D).
+  Duplicate the original image (<span class="filter">&lt;Image&gt;Image-&gt;Duplicate</span> or <kbd>Ctrl+D</kbd>).
   <br />
   In the duplicate, select <span class="filter">&lt;Image&gt;Image-&gt;Colors-&gt;Threshold</span>. In the threshold dialog box, drag to select the very right 
   (extreme highlights) portion of the histogram. Alternatively, you can type in the lower bound, as I did here (250).
@@ -79,7 +79,7 @@
   <img src="image-channel.jpg" alt=""/>
 </p>
 <p>
-  Go back to the original image, and bring up the Layers and Channels dialog (<span class="filter">&lt;Image&gt;Layers-&gt;Layers, Channels &amp; Paths</span>, or Ctrl+L). 
+  Go back to the original image, and bring up the Layers and Channels dialog (<span class="filter">&lt;Image&gt;Layers-&gt;Layers, Channels &amp; Paths</span>, or <kbd>Ctrl+L</kbd>). 
   Click on the Channels tab and add a new channel by clicking on the new channel button.
 </p>
 
@@ -93,7 +93,7 @@
   <img src="layers2.jpg" alt=""/>
 </p>
 <p>
-  Go back to the threshold image, <span class="filter">&lt;Image&gt;Select-&gt;All</span> (Ctrl+A) and <span class="filter">&lt;Image&gt;Edit-&gt;Copy</span> (Ctrl+C).
+  Go back to the threshold image, <span class="filter">&lt;Image&gt;Select-&gt;All</span> (Ctrl+A) and <span class="filter">&lt;Image&gt;Edit-&gt;Copy</span> (<kbd>Ctrl+C</kbd>).
   <br />
   <span class="filter">&lt;Image&gt;Edit-&gt;Paste</span> it into the original image (it should go into the new channel).
   <br />
@@ -108,7 +108,7 @@
   <img src="image2.jpg" alt=""/>
 </p>
 <p>
-  Click on the Channels tab again, and right click on the new channel and select Channel to Selection (Ctrl+S). 
+  Click on the Channels tab again, and right click on the new channel and select Channel to Selection (<kbd>Ctrl+S</kbd>). 
   You may want to also click on the eye beside the channel to turn off visibility of the channel.
   <br /><br />
   Now feather the selection (<span class="filter">&lt;Image&gt;Select-&gt;Feather</span>). I used a value of 15 pixels or so in this case.
