--- a/tutorials/Blur_Overlays/index.html
+++ b/tutorials/Blur_Overlays/index.html
@@ -82,7 +82,7 @@
   Go back to the image window and right click, selecting <span class="filter">&lt;Image&gt;Filters-&gt;Blur-&gt;Gaussian Blur</span>. 
   You will need to experiment to find the best value, but typically a value between 10 and 30 will do nicely.
   <br /><br />
-  Voila! If you don't like the effect, you can undo the blur (Ctrl+Z) and redo it (Shift+Alt+F) with a different value.
+  Voila! If you don't like the effect, you can undo the blur (<kbd>Ctrl+Z</kbd>) and redo it (<kbd>Shift+Alt+F</kbd>) with a different value.
   <br />
   Click on the "eye" next to the Blur Overlay layer in the Layers dialog to rapidly compare the image with and without the overlay. 
   Similarly, turn off the Background layer if you want to view the overlay to do further work on it.
@@ -101,7 +101,7 @@
   <img src="layers-duplicate.jpg" alt=""/>
 </p>
 <p>
-  Duplicate the image (Ctrl+D).
+  Duplicate the image (<kbd>Ctrl+D</kbd>).
   <br />
   Flatten the duplicate (<span class="filter">&lt;Image&gt;Layers-&gt;Flatten Image</span>).
 </p>
@@ -162,10 +162,10 @@
   <br />
   Right-click on the Blur Overlay layer and select Add Layer Mask. In the Add Mask Options dialog, select White (Full Opacity) and click OK.
   <br />
-  Now go back to the blurred threshold image, select all and copy (Ctrl+A then Ctrl+C). Go back to the overlay blur image and paste (Ctrl+V). 
+  Now go back to the blurred threshold image, select all and copy (<kbd>Ctrl+A</kbd> then <kbd>Ctrl+C</kbd>). Go back to the overlay blur image and paste (<kbd>Ctrl+V</kbd>). 
   Go to the Layers dialog and click the anchor button (<img src="anchor.jpg" alt=""/>) to anchor the mask.
   <br /><br />
-  <b>Tip:</b> Ctrl-click on the layer mask icon in the Layers dialog to toggle the effect of the layer mask to compare the image with and without the highlight mask.
+  <b>Tip:</b> <kbd>Ctrl-click</kbd> on the layer mask icon in the Layers dialog to toggle the effect of the layer mask to compare the image with and without the highlight mask.
 </p>
 
 <div class="subtitle">Step 10</div>
