--- a/tutorials/Color2BW/index.html
+++ b/tutorials/Color2BW/index.html
@@ -46,7 +46,7 @@
   Here is what I get if I use the standard mode change to grayscale from RGB.
 </p>
 <p>
-  Duplicate the original image (Ctrl+D) and right-click on the copy. Select <span class="filter">&lt;Image&gt;Image-&gt;Mode-&gt;Grayscale</span>. 
+  Duplicate the original image (<kbd>Ctrl+D</kbd>) and right-click on the copy. Select <span class="filter">&lt;Image&gt;Image-&gt;Mode-&gt;Grayscale</span>. 
   I don't know how this conversion works in the GIMP, but I have read that Photoshop uses a standard mix of the RGB channels for 
   their grayscale conversion: RED=30%, GREEN=59% and BLUE=11%. Supposedly this mix accounts for the eye's sensitivity to different colors. 
   This formula does a pretty nice job in the general case, but some images do not work as well with it, particularly if the green channel component is not strong.
@@ -63,7 +63,7 @@
   <img src="image-desaturate-zoom100-481x397.jpg" alt=""/>
 </p>
 <p>
-  Here is what I get if I use desaturate instead. Duplicate the original image (Ctrl+D) and right-click on the copy. 
+  Here is what I get if I use desaturate instead. Duplicate the original image (<kbd>Ctrl+D</kbd>) and right-click on the copy. 
   Select <span class="filter">&lt;Image&gt;Image-&gt;Colors-&gt;Desaturate</span>. Unlike the grayscale mode change above, 
   the channels are not remixed in different percentages, so we should expect different results.
 </p>
@@ -177,7 +177,7 @@
 </p>
 <p>
   When you have something that looks decent in the preview, click OK. If you don't like the look of the result, 
-  Undo (Ctrl+Z) and reapply the filter with different settings (Shift+Alt+F).
+  Undo (<kbd>Ctrl+Z</kbd>) and reapply the filter with different settings (<kbd>Shift+Alt+F</kbd>).
 </p>
 <p>
   The advantage of the channel mixer is (obviously) flexibility. I like to decompose and examine the individual RGB channels, as we did earlier. 
