--- a/tutorials/Creating_Icons/index.html
+++ b/tutorials/Creating_Icons/index.html
@@ -6,7 +6,8 @@
 
 <div class="subtitle">Intention</div>
 <p>
-   Almost every desktop enviroment I've seen has a special application for creating icons, usually a very limited drawing application. In this short tutorial, we'll show you how GIMP (GNU Image Manipulation Program) can help you create icons for your desktop.
+   Almost every desktop enviroment I've seen has a special application for creating icons, usually a very limited drawing application. 
+   In this short tutorial, we'll show you how GIMP (GNU Image Manipulation Program) can help you create icons for your desktop.
 </p>
 
 <div class="subtitle">Before You Begin</div>
@@ -65,7 +66,7 @@
   (the little arrow in the upper left side of the window). Use a <i>1:1</i> zoom on this view, so that you can paint at an <i>8:1</i> zoom and see the results immediately.
 </p>
 <p>
-  Make sure to turn off the selection decorations on the <i>1:1</i> window. To do that, focus the window and press <b>Ctrl+T</b> or choose 
+  Make sure to turn off the selection decorations on the <i>1:1</i> window. To do that, focus the window and press <kbd>Ctrl+T</kbd> or choose 
   <span class="filter">&lt;Image&gt;View-&gt;Toggle selection</span>.
 </p>
 
@@ -95,7 +96,7 @@
   As much as it sounds hard, manual anti-aliasing is easy, and even fun. All you need for this is the <i>opacity</i> setting of the pencil tool. 
   Say we have an outline that's aliased (Like the image to the left). Select a 1x1 brush and set the opacity to something like 40%. 
   When you start drawing with this black brush by clicking on the white surface, it will become light gray. One more click and it gets darker. 
-  That way you can easily create fluent transitions between the two border colors. You can also change the active color using <b>Ctrl</b>-leftMB or just by 
+  That way you can easily create fluent transitions between the two border colors. You can also change the active color using <kbd>Ctrl</kbd>-leftMB or just by 
   swapping forground and background colors (<b>X</b>).
 </p>
 <p>
@@ -138,7 +139,7 @@
   After you're done with the icon, you can drag colors from the palette to the background layer to make sure that the icon looks right on any background.
 </p>
 <p>
-  Drag the black preview rectangle from the toolbox, or press <b>Ctrl-+</b> to fill the silhouette. You should have a black square on a light background.
+  Drag the black preview rectangle from the toolbox, or press <kbd>Ctrl-+</kbd> to fill the silhouette. You should have a black square on a light background.
   Then, use the eraser tool to smooth the edges of the square so that the shape is better. This will also add a slight white shine to the corners of the image.
 </p>
 
@@ -243,7 +244,7 @@
 <p>
   For extra realism you can add a TV glow. Create a layer above the screen, but below the remote. Create a rectangular selection of the screen, 
   then increase its size by 6 pixels and fill it with blue. Now, shrink that selection by 3 pixels and fill with white. 
-  Deselect the are with <b>Ctrl-Shift-A</b> and apply <span class="filter">&lt;Image&gt;Filter-&gt;Blur-&gt;Gaussian Blur RLE</span> by about 5 pixels. 
+  Deselect the are with <kbd>Ctrl-Shift-A</kbd> and apply <span class="filter">&lt;Image&gt;Filter-&gt;Blur-&gt;Gaussian Blur RLE</span> by about 5 pixels. 
   Now set the layer mode to <i>overlay</i>, creating the transparency effect.
 </p>
 
