--- a/tutorials/Perlotine/index.html
+++ b/tutorials/Perlotine/index.html
@@ -74,7 +74,7 @@
 </p>
 <p>
   Below is the html that Perlotine generated. As I slice the smaller parts, this first html will be a base that the new tables should easily slide into.
-  You can shift-right-click on the pieces to see how it worked.
+  You can <kbd>shift-right-click</kbd> on the pieces to see how it worked.
 </p>
 <div class="code">
 &lt;table cellspacing=0 cellpadding=0 border=0&gt;
@@ -243,7 +243,7 @@
 </td></tr></table>
 
 <div class="code">
-<p>&lt!--  Ugly ugly HTML (that works in mozilla)  --&gt;</p>
+<p>&lt;!--  Ugly ugly HTML (that works in mozilla)  --&gt;</p>
 &lt;table cellspacing=0 cellpadding=0 border=0&gt;
     &lt;tr&gt;
         &lt;td colspan=&quot;3&quot;&gt;&lt;img alt=&quot; &quot; src=&quot;imap-table1-0-0.png&quot; width=&quot;290&quot; height=&quot;73&quot;&gt;&lt;/td&gt;
