--- a/tutorials/Reducing_CCD_Noise/index.html
+++ b/tutorials/Reducing_CCD_Noise/index.html
@@ -76,7 +76,7 @@
 <div class="subtitle">Tips and Suggestions</div>
 <ul>
   <li>It may not be necessary to apply the despeckle filter across all RGB channels; as I mentioned earlier, CCD noise tends to show up predominantly in the blue or red channels. 
-  You can open the Layers dialog (Ctrl+L), click on the Channels tab and just select the channel(s) that you want to apply the filter to. 
+  You can open the Layers dialog (<kbd>Ctrl+L</kbd>), click on the Channels tab and just select the channel(s) that you want to apply the filter to. 
   To examine the individual channels for noise, right click in the image and select <span class="filter">&lt;Image&gt;Image-&gt;Mode-&gt;Decompose</span>; 
   choose RGB for the decomposition.
   <br /><br />
