--- a/tutorials/Selective_Color/index.html
+++ b/tutorials/Selective_Color/index.html
@@ -36,7 +36,7 @@
   <img src="image2.jpg" alt=""/>
 </p>
 <p>
-  Duplicate the image (Ctrl+D).
+  Duplicate the image (<kbd>Ctrl+D</kbd>).
   <br />
   By whatever method suits you best, convert the duplicate image to B&amp;W. Once you have gotten the B&amp;W version that you like, 
   change it back to RGB mode (<span class="filter">&lt;Image&gt;Image-&gt;Mode-&gt;RGB</span>).
@@ -52,7 +52,7 @@
   <img src="layers2.jpg" alt=""/>
 </p>
 <p>
-  Open the Layers dialog (Ctrl+L). Make sure that the original color image is selected in the Image drop down box. Click on the new layer button at the bottom of the dialog.
+  Open the Layers dialog (<kbd>Ctrl+L</kbd>). Make sure that the original color image is selected in the Image drop down box. Click on the new layer button at the bottom of the dialog.
   <br />
   Here I've named the new layer "B&amp;W"
   <br />
@@ -65,7 +65,7 @@
   <img src="layers4.jpg" alt=""/>
 </p>
 <p>
-  Go to the B&amp;W image and select all, then copy (Ctrl+A then Ctrl+C). Then go to the color image window and paste (Ctrl+V). 
+  Go to the B&amp;W image and select all, then copy (<kbd>Ctrl+A</kbd> then <kbd>Ctrl+C</kbd>). Then go to the color image window and paste (<kbd>Ctrl+V</kbd>). 
   The B&amp;W image should be pasted into that layer, obscuring the color image.
   <br />
   Click the anchor button in the Layers dialog to anchor the pasted image.
