--- a/tutorials/Sepia_Toning/index.html
+++ b/tutorials/Sepia_Toning/index.html
@@ -48,7 +48,7 @@
   <img src="image2.jpg" alt=""/>
 </p>
 <p>
-  Duplicate the original image (<span class="filter">&lt;Image&gt;Image-&gt;Duplicate</span> or Ctrl+D). 
+  Duplicate the original image (<span class="filter">&lt;Image&gt;Image-&gt;Duplicate</span> or <kbd>Ctrl+D</kbd>). 
   You may want to minimize the original now (or close it) so you don't choose it by mistake.
   <br /><br />
   Using whatever technique you like best, convert the duplicate to B&amp;W. I recommend the channel mixer for best results, but you can also convert to grayscale 
@@ -76,7 +76,7 @@
   <img src="layers2.jpg" alt=""/>
 </p>
 <p>
-  Bring up the Layers dialog (Ctrl+L) and click on the button for a new layer. Give it the name "Sepia Mask" and choose the option to fill it with the foreground color. Click OK.
+  Bring up the Layers dialog (<kbd>Ctrl+L</kbd>) and click on the button for a new layer. Give it the name "Sepia Mask" and choose the option to fill it with the foreground color. Click OK.
   <br />
   You should see nothing but the color now in the image window, since it obscures the image in the layer below. We are going to selectively apply this color to the image.
 </p>
@@ -96,8 +96,8 @@
   <img src="image3.jpg" alt=""/>
 </p>
 <p>
-  In the Layers dialog, click on (select) the Background layer. Go up to the image window, select all and copy (Ctrl+A then Ctrl+C). In the Layers dialog, 
-  click on the layer mask icon in the Sepia Mask layer (the little white square). Then go back up to the image window and paste (Ctrl+V)
+  In the Layers dialog, click on (select) the Background layer. Go up to the image window, select all and copy (<kbd>Ctrl+A</kbd> then <kbd>Ctrl+C</kbd>). In the Layers dialog, 
+  click on the layer mask icon in the Sepia Mask layer (the little white square). Then go back up to the image window and paste (<kbd>Ctrl+V</kbd>)
 </p>
 
 <div class="subtitle">Step 7</div>
