--- a/tutorials/Smart_Sharpening/index.html
+++ b/tutorials/Smart_Sharpening/index.html
@@ -57,7 +57,7 @@
   <img src="image-lab-decomposed.jpg" alt=""/>
 </p>
 <p>
-  Duplicate the image by pressing Ctrl+D or right-click and select <span class="filter">&lt;Image&gt;Image-&gt;Duplicate</span>. 
+  Duplicate the image by pressing <kbd>Ctrl+D</kbd> or right-click and select <span class="filter">&lt;Image&gt;Image-&gt;Duplicate</span>. 
   It might be wise to minimize the original image window now. You can open it later to compare to the result.
   <br />
   Right-click on the duplicate image and select <span class="filter">&lt;Image&gt;Image-&gt;Mode-&gt;Decompose</span>. In the decompose dialog box, 
@@ -159,10 +159,10 @@
 <p>
   Right-click in the blurred/edges image window and <span class="filter">&lt;Image&gt;Select-&gt;All</span>. Right-click again and select 
   <span class="filter">&lt;Image&gt;Edit-&gt;Copy</span>. 
-  (Alternatively you can use keyboard shortcuts Ctrl+A and Ctrl+C in succession).
+  (Alternatively you can use keyboard shortcuts <kbd>Ctrl+A</kbd> and <kbd>Ctrl+C</kbd> in succession).
   <br /><br />
   In the Layers dialog, make sure the Sharpening Mask channel is selected. Go back to the LAB (value) window and paste 
-  (<span class="filter">&lt;Image&gt;Edit-&gt;Paste</span> or Ctrl+V).
+  (<span class="filter">&lt;Image&gt;Edit-&gt;Paste</span> or <kbd>Ctrl+V</kbd>).
   <br /><br />
   Select the Layers tab in the Layers dialog and click on the anchor button (<img src="anchor.jpg" alt=""/>) to anchor the floating image.
 </p>
@@ -198,7 +198,7 @@
   <br /><br />
   In the example here I used Radius=1, Amount=2.0 (200% ?), Threshold=0.
   <br /><br />
-  Now get rid of the selection (right-click and <span class="filter">&lt;Image&gt;Select-&gt;None</span>) and zoom in (= key) to examine the results. 
+  Now get rid of the selection (right-click and <span class="filter">&lt;Image&gt;Select-&gt;None</span>) and zoom in (<kbd>=</kbd> key) to examine the results. 
   If you're not happy with the results, undo and try the sharpen step again with different parameters. 
 </p>
 
