--- a/tutorials/Advanced_Animations/index.html
+++ b/tutorials/Advanced_Animations/index.html
@@ -20,7 +20,7 @@
 </p>
 <p>
   To make things easier, we'll start with a ready-to-go static image. To load it into GIMP, just copy the link to the image on the left by selecting 
-  copy target or copy shortut from the image context menu accessible by pressing right mouse on the image. In GIMP, just press Ctrl+O and paste the 
+  copy target or copy shortut from the image context menu accessible by pressing right mouse on the image. In GIMP, just press <kbd>Ctrl+O</kbd> and paste the 
   URL to the open dialog. Gimp will download the compressed image and open it transparently so you don't have to bother.
 </p>
 
