--- a/tutorials/Lite_Quickies/index.html
+++ b/tutorials/Lite_Quickies/index.html
@@ -26,7 +26,7 @@
 </p>
 <p>
   Problem: you have a huge image and you want to put it nicely for viewing on a web page. The GIMP is a quick solution. 
-  Our example image is this beauty <a href="m51_hallas_big.jpg" alt=""/>m51_hallas_big.jpg</a> from <a href="http://antwrp.gsfc.nasa.gov/apod/ap020710.html">APOD</a>.
+  Our example image is this beauty <a href="m51_hallas_big.jpg">m51_hallas_big.jpg</a> from <a href="http://antwrp.gsfc.nasa.gov/apod/ap020710.html">APOD</a>.
 </p>
 <p>
   The first thing that you might notice is that The GIMP opens the image at a logical size for viewing. 
