--- a/tutorials/Sepia_Toning/index.html
+++ b/tutorials/Sepia_Toning/index.html
@@ -163,7 +163,7 @@
   <li>Try adding some grain or noise to the image (probably before you desaturate).</li>
   <li>We used a single, flat color for the sepia color. Experiment with different colors, multiple colors or a color gradient for the Sepia Mask layer.</li>
   <li>You can apply levels, curves or other adjustments to the contrast mask to increase or decrease "absorbency" of the sepia color into different areas of the image.</li>
-  <li>The method by which you get a black and white image makes a big difference in how the sepia toning comes out.
+  <li>The method by which you get a black and white image makes a big difference in how the sepia toning comes out.</li>
 </ul>
 <p class="images">
   <img src="grayscale-final-446x512.jpg" alt=""/>
@@ -180,7 +180,8 @@
 <ul>
   <li>Doing this same process with Photoshop (<a href="http://www.retouchpro.com/tutorials/lum-mask-sepia.html">Part I</a>, 
   <a href="http://www.retouchpro.com/tutorials/lum-mask-sepia2.html">Part II</a>)</li>
-  <li><a href="http://www.photo.net/photo/sepia/index">Stepwise Sepia Toning Using Adobe Photoshop</a>. This method, using Duotones and Tritones, seems to be quite popular.</li>
+  <li><a href="http://www.photo.net/photo/sepia/index">Stepwise Sepia Toning Using Adobe Photoshop</a>. 
+  This method, using Duotones and Tritones, seems to be quite popular.</li>
 </ul>
 
 <p>
