--- a/tutorials/Using_GAP/index.html
+++ b/tutorials/Using_GAP/index.html
@@ -8,7 +8,7 @@
 <p>
   GAP is an advanced tool to be able to create animations, this guide should give you some sort of
   view of how GAP works and what you can do with it. For a good tutorial of how to make an animation with GAP 
-  then take a look at the "<a href="/tutorials/Using_GAP/">Advanced Animation</a>" tutorial.
+  then take a look at the "<a href="/tutorials/Advanced_Animations/">Advanced Animation</a>" tutorial.
 </p>
 
 <div class="subtitle">Main Interface</div>
@@ -81,7 +81,7 @@
 </p>
 
 <p>
-  The original tutorial can be found <a href="http://jimmac.musichall.cz/popup.php3?img=gap&mapa=">here</a>.
+  The original tutorial can be found <a href="http://jimmac.musichall.cz/popup.php3?img=gap&amp;mapa=">here</a>.
 </p>
 
 </div>
