Modified ChangeLog. Fixed the broken link to the PS Color2BW tutorial.
Modified ChangeLog.
Fixed the broken link to the PS Color2BW tutorial.

--- a/tutorials/Color2BW/index.html
+++ b/tutorials/Color2BW/index.html
@@ -219,7 +219,7 @@
 <div class="subtitle">Further Reading</div>
 <ul>
   <li><a href="http://www.microweb.com/idig/content/seybold/imgchanl.htm">A discussion of what's in the red, green and blue channels of a digital image</a>.</li>
-  <li>A <a href="http://www.luminous-landscape.com/tutorials/b&w_better.shtml">Photoshop channel mixer tutorial</a> 
+  <li>A <a href="http://luminous-landscape.com/tutorials/b-w_better.shtml">Photoshop channel mixer tutorial</a> 
   on the <a href="http://www.luminous-landscape.com">luminous landscape</a> web site.</li>
   <li><a href="http://www.carlvolk.com/photoshop21.htm">Carl Volk's Photoshop tips for converting color images to B&amp;W</a>.</li>
   <li>zuga.net: <a href="http://www.zuga.net/printer_55.shtml">Digital RGB to Greyscale Conversions</a></li>
